examples/test/testpolicy9307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9307
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key4: value16
      key22: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value8
          key26: value31
          key25: value34
      podSelector:
        matchLabels:
          key6: value35
          key8: value17
